# system-tester

./: .gitignore  CMakeLists.txt  main.cpp
data_analitics/: CMakeLists.txt  data_analitics.cpp  data_analitics.h
data_collectors/: CMakeLists.txt  cpu_load.cpp  cpu_load.h  cpu_procs.cpp  cpu_procs.h  data_collector_object.cpp  data_collector_object.h
data_container/: CMakeLists.txt  data_container.cpp  data_container.h
data_container/data_structure/: CMakeLists.txt  queuelst.cpp  queuelst.h
data_display/: CMakeLists.txt  data_display.cpp  data_display.h
